--- a/css.css
+++ b/css.css
@@ -2,16 +2,20 @@ body {
     font-family: "Century Gothic", Arial, sans-serif;
     text-align: center;
     color: white;
-    background: black url(./images/background.jpg);
+    background: #210f24;
     margin: 0;
 }
+
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 
 #warn > #warning {
     color: yellow;
     font-weight: bold;
 }
-
-
 
 footer {
     margin:  3em auto;
@@ -31,7 +35,6 @@ footer {
     flex-shrink: 1; /* Allows it to shrink within flex parent */
 }
 
-
 .hide {
     display: none;
     margin: 0;
@@ -39,10 +42,11 @@ footer {
 }
 
 .container {
+    display: inline-block;
+    color: black;
     padding: 3%;
     text-align: center;
-    background-color: #1f1e1e;
-    border: 2px #C0C0C0 solid;
+    background-color: rgb(255 255 255 / 80%);
     border-radius: 10px;
     overflow: hidden;
     margin: 0;
@@ -74,6 +78,7 @@ main {
     margin: 2%;
     text-align: center;
     max-height: 330px;
+    width: 80%;
 }
 
 .text-div p {
@@ -152,11 +157,11 @@ h1 {
 
 #back2top, #backButton {
     color: cornflowerblue;
-    margin-top: 1%;
     padding : 1%;
     width: 20%;
     background-color: #181818;
     border: 1px cornflowerblue solid;
+    margin: 2%;
 }
 
 #btn1 {
@@ -173,23 +178,29 @@ h1 {
     color: white;
 }
 
+
 #bigImg {
-    text-align: center;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-bottom: 3%;
-    background-color: #1f1e1e;
-    border: 2px #C0C0C0 solid;
+    color: black;
+    background-color: rgb(255 255 255 / 80%);
     border-radius: 10px;
-    overflow: hidden;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    max-height: 100vh;
+    padding: 1.5%;
 }
 
 .big-img {
-    width: 100%;
-    border-radius: 15px;
-
+    margin: 1%;
+    max-width: 70%;
+    max-height: 80%;
+    height: auto;
+    display: block;
 }
+
 .big-img > div > img{
     max-height: 30%;
     min-height: 30%;
