--- a/css.css
+++ b/css.css
@@ -41,11 +41,10 @@ footer {
     height: 0;
 }
 
-.container {
-    display: inline-block;
+.container{
+    justify-content: center;
     color: black;
     padding: 3%;
-    text-align: center;
     background-color: rgb(255 255 255 / 80%);
     border-radius: 10px;
     overflow: hidden;
@@ -73,9 +72,9 @@ main {
 }
 
 .text-div {
+    margin: 0.5% auto;
     border-top: 2px solid #9e9b9b;
     padding-top: 2%;
-    margin: 2%;
     text-align: center;
     max-height: 330px;
     width: 80%;
@@ -186,24 +185,12 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    max-height: 100vh;
     padding: 1.5%;
 }
 
-.big-img {
-    margin: 1%;
-    max-width: 70%;
-    max-height: 80%;
-    height: auto;
-    display: block;
-}
-
-.big-img > div > img{
-    max-height: 30%;
-    min-height: 30%;
+.big-img > img, video{
+    width: 100%;
+    height: 100%;
 }
 
 #load_bar {
