--- a/css.css
+++ b/css.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 
-#warn > #warning {
+#warning {
     color: yellow;
     font-weight: bold;
 }
@@ -92,21 +92,12 @@ main {
     white-space: nowrap;
 }
 
-/*.text-div p {*/
-/*    overflow: hidden;*/
-/*    text-overflow: ellipsis;*/
-/*    white-space: nowrap;*/
-/*}*/
-
 #title {
     padding: 1%;
     text-align: center;
     border-bottom: 2px #C0C0C0 solid;
     background-color: #181818;
     width: 100%;
-    /*making the title div fit the whole of the screen?*/
-    /*position: absolute;*/
-    /*top: 0;*/
     margin: 0 0 15px;
 }
 
