--- a/css.css
+++ b/css.css
@@ -11,7 +11,6 @@ html, body {
     width: 100%;
 }
 
-
 #warning {
     color: yellow;
     font-weight: bold;
@@ -76,7 +75,7 @@ main {
     border: 2px solid #9e9b9b;
     padding: 2%;
     text-align: center;
-    max-height: 330px;
+    max-height: 250px;
     width: 80%;
     overflow: auto; /* Enables scrolling if content overflows */
     overflow-x: hidden;
@@ -110,21 +109,22 @@ h1 {
     margin: 2% auto 0;
     max-width: 100%; /* Ensure it doesn't overflow the container */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25%, 3fr));
+    grid-template-columns: repeat(auto-fit, minmax(30%, 3fr));
     gap: 20px;
-    vertical-align: middle;
+    grid-auto-flow: dense; /* Fill gaps in the grid */
 }
 
-#nasa_gallery > div > img{
-    max-height: 200px;
+#nasa_gallery > div > .small_image{
+    max-width: 80%;
+    height: auto;
 }
-#nasa_gallery > div > video{
-    max-height: 200px;
+#nasa_gallery > div > .small_video{
+    max-width: 80%;
+    height: auto;
 }
 
-#nasa_gallery > div > img:hover {
+#nasa_gallery > div > .small_image:hover {
     cursor: pointer;
-    image-rendering: -webkit-crisp-edges;
 }
 
 @media screen and (max-width: 1200px) {
@@ -158,13 +158,11 @@ h1 {
 }
 
 #back2top, #backButton {
-    color: cornflowerblue;
-    padding : 1%;
-    width: 20%;
-    background-color: #181818;
-    border: 1px cornflowerblue solid;
-    margin: 2%;
-}
+    height: 60px;
+    width: 60px;
+    position: fixed; /* Make the button stay in place */
+    bottom: 20px; /* Position it 20px from the bottom */
+    right: 20px; /* Position it 20px from the right */}
 
 #btn1 {
     height: 100%;
@@ -183,7 +181,7 @@ h1 {
 
 #bigImg {
     color: black;
-    background-color: rgb(255 255 255 / 80%);
+    background-color: rgb(255 255 255 / 70%);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -191,9 +189,12 @@ h1 {
     padding: 1.5%;
 }
 
-.big-img > img, video{
-    width: 100%;
-    height: 100%;
+#bigImg > img, #bigImg > video{
+    width: 90%;
+    max-width: 750px;
+    height: auto;
+    display: block; /* Fixes inline spacing */
+    object-fit: contain; /* Ensures the content fills the container */
 }
 
 #load_bar {
@@ -238,11 +239,6 @@ h1 {
     margin: 2%;
 }
 
-.video {
-    width: 100%;
-    margin: 2%;
-}
-
 #date {
     font-weight: bold;
 }
@@ -253,4 +249,15 @@ h1 {
 
 #dateDiv > p {
     display: inline;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+}
+
+.switch input {
+    display: none;
 }
